# UI-Minecraft-Launcher-Flatpack

./: .config-example  .gitignore  CMakeLists.txt  Cargo.toml  GUIA_FLATPAK_MANIFIESTO.md  LICENSE  README.md  requirements.txt
.lapce/: run.toml
flatpak/: org.lazheart.minecraft-launcher.desktop  org.lazheart.minecraft-launcher.metainfo.xml  wrapper.sh
gui/: CMakeLists.txt  flatpak-module.yaml
gui/include/: launcherbackend.h  profilemanager.h
gui/qml/: AboutAuthorCard.qml  AboutDisclaimerCard.qml  AboutFeaturesCard.qml  AboutHeroCard.qml  AboutPage.qml  DebugCard.qml  HomePage.qml  InstallVersionDialog.qml  Media.js  NavBar.qml  PlayTab.qml  SettingsPage.qml  SideBar.qml  main.qml  qml.qrc
gui/src/: launcherbackend.cpp  main.cpp
include/: launcherbackend.h  loghandler.h  minecraftextract.h  minecraftlaunch.h  minecraftmanager.h  packageinspector.h  packagemanager.h  pathmanager.h  profilemanager.h  thememanager.h  translator.h  versionsapihandler.h  workers.h  zipvalidator.h
qml/: AboutFeaturesCard.qml  DeleteVersionDialog.qml  HomePage.qml  ImportWorldsAddonsCard.qml  LanguageCard.qml  Media.js  NavBar.qml  PackageManagementPage.qml  PathsCard.qml  ProfilesCard.qml  SettingsPage.qml  SideBar.qml  main.qml  qml.qrc
qml/about/: AboutPage.qml
qml/about/cards/: AboutAuthorCard.qml  AboutDisclaimerCard.qml  AboutFeaturesCard.qml  AboutHeroCard.qml
qml/home/: HomePage.qml
qml/home/cards/: HomeDashboard.qml  HomeEmptyState.qml  HomeVersionSelected.qml  PlayTab.qml
qml/navbar/: NavBar.qml  NavBarButton.qml
qml/settings/: SettingsPage.qml
qml/settings/cards/: DebugCard.qml  LanguageCard.qml  LogsTab.qml  PathsCard.qml  ProfilesCard.qml  SettingsTab.qml  VisualCard.qml
qml/sidebar/: SideBar.qml
qml/sidebar/cards/: DeleteVersionDialog.qml  ImportWorldsAddonsCard.qml  InstallVersionDialog.qml
src/: launcherbackend.cpp  loghandler.cpp  main.cpp  main.py  main.rs  minecraftextract.cpp  minecraftlaunch.cpp  minecraftmanager.cpp  org.lazheart.minecraft-launcher.appdata.xml  org.lazheart.minecraft-launcher.desktop  org.lazheart.minecraft-launcher.metainfo.xml  packageinspector.cpp  packagemanager.cpp  pathmanager.cpp  profilemanager.cpp  thememanager.cpp  translator.cpp  versionsapihandler.cpp  workers.cpp  wrapper.sh  zipvalidator.cpp
themes/: dark.css  light.css
translations/: app_en.ts  app_es.qm  app_es.ts
ui/: app.py
ui/components/: __init__.py  footer.py  launcher_button.py  navbar.py
ui/pages/: __init__.py  about_page.py  home_page.py  setting_page.py
ui/theme/: __init__.py  colors.py  styles.py
ui/utils/: backend.py  paths.py  shortcuts.py
