[package]
name = "minecraft_egui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "=0.27.2"
eframe = "=0.27.2"
ecolor = "=0.27.2"
egui_extras = "=0.20.0"
rfd = "=0.10.0"
directories = "5"

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
