[package]
name = "minecraft_iced"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI con iced 0.8 compatible con Rust 1.72
iced = { version = "0.8", features = ["tokio"] }
rfd = "0.10.0"        # para selector de archivos
directories = "5"      # manejo de rutas de sistema

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"